<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:gravity="center"
    android:background="@drawable/car_shape">
    <ImageView
        android:id="@+id/zatvori"
        android:contentDescription="@string/prikaz_slike_res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_black_24dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:elevation="5dp"
        android:layout_alignParentEnd="true"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#db021b"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
               >
                <TextView
                    android:id="@+id/naslovrez"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:textSize="25sp"
                    android:text="@string/inicijalni_text_res"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:contentDescription="@string/prikaz_slike_res"
                    android:src="@drawable/ic_error_outline_black_24dp"/>
                <TextView
                    android:id="@+id/prikazRezultata"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="20dp"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textColor="#ffffff"
                    android:text="@string/success_res"/>
                <Button
                    android:id="@+id/gumbDialog"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/try_again_res"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:background="@drawable/dialog_negative_button"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
        </LinearLayout>

        </androidx.cardview.widget.CardView>

</RelativeLayout>